<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">GreenLight</string>
    <string name="edit">Edit</string>
    <string name="create_new_event">Новое событие</string>
    <string name="title_activity_main">GreenLight</string>
    <string name="microphone">Microphone</string>
    <string name="event_list">Список событий</string>
    <string name="map">Карта</string>
    <string name="remove">Remove</string>
    <string name="checked">Checked</string>
    <string name="search_hint">Company name</string>
    <string name="seetings">Settings</string>
    <string name="share">Share</string>
    <string name="donate">Donate</string>
    <string name="ratee_app">Rate app</string>
    <string name="add_price_alert">Add price alert</string>
    <string name="title_activity_activity_details">ActivityDetails</string>
    <string name="sliding_menu">Sliding menu</string>
    <string name="exit">Exit</string>
    <string name="share_text">Stock Quotes - Watch your stocks in material design way!</string>
    <string name="from">from</string>
    <string name="drag_drop">   Drag &amp; Drop</string>
    <string name="sort_ab">Sort alphabetically</string>
    <string name="stock_details">Stock details</string>
    <string name="stock_news">News</string>
    <string name="week">Week</string>
    <string name="volume">Volume</string>
    <string name="open">Open</string>
    <string name="hight">Hight</string>
    <string name="low">Low</string>
    <string name="prev_close">Prev Close</string>
    <string name="eps">EPS</string>
    <string name="exchange">Exchange</string>
    <string name="last_trade">Last trade</string>
    <string name="title_activity_activity_webview">ActivityWebview</string>
    <string name="grpah_week">week</string>
    <string name="grpah_month">month</string>
    <string name="grpah_year">year</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="github">GitHub</string>
    <string name="copyright">Copyright</string>
    <string name="welcome_message">Добро пожаловать в GreenLight!</string>
    <string name="feedback">Feedback</string>
    <string name="send_email">Send Email</string>
    <integer name="com_vk_sdk_AppId">5226579</integer>
    <string name="facebook_app_id" translatable="false">1505046203136521</string>
    <string name="server_gcm_api_key">AIzaSyAuJWoAyTMP2f7-4HyXjeTYT4p3CNiY8LQ</string>
    <!--string name="server_gcm_api_key">AIzaSyD4XjS7JuVTFBBLgh4RP9734Zjb-uzLSt4</string-->
    <string name="server_gcm_sender_id" translatable="false">364386966248</string>
    <string name="name_with_colon">Name:</string>
    <string name="event_view_radius">Event View Radius (Km)</string>
    <string name="login_with_colon">Login:</string>
    <string name="pwd_with_colon">Password:</string>
    <string name="new_user">New User</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">регистрация</string>
    <string name="do_sign_up">Зарегистрировать</string>
    <string name="create">Создать</string>
    <string name="play">Воспроизвести</string>
    <string name="comment">Комментарий</string>
    <string name="abc">abc</string>
    <string name="photo">фото</string>
    <string name="audio">аудио</string>
    <string name="authorization_type_gl">Авторизация GL</string>
    <string name="authorization_type_vk">VK</string>
    <string name="authorization_type_facebook">facebook</string>
    <string name="authorization_type_twitter">TWITTER</string>
    <string name="authorization_type_none">Без авторизации</string>
    <string name="authorization_message">Войдите через одну из соцсетей, чтобы создавать и просматривать события в ленте с привязкой к вашему местоположению, или войдите как гость, чтобы видеть события, создаваемые другими пользователями.</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
</resources>
