<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/toolbar" />
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView3">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center"
                android:id="@+id/layout_buttons">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/welcome_message"
                    android:id="@+id/textView2" android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authorization_type_gl"
                    android:id="@+id/btnAuthorizeGl"
                    android:src="@drawable/icon_login_greenlight"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:layout_marginTop="10dp"/>
            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorization_type_vk"
                    android:id="@+id/btnVKLogin"
                    android:layout_gravity="center" android:background="@null" android:src="@drawable/icon_login_vk"
                    android:layout_marginTop="10dp"/>
            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorization_type_facebook"
                    android:id="@+id/btnFBLogin"
                    android:layout_gravity="center"
                    android:background="@null" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
                    android:textColor="#f9f9ff" android:src="@drawable/icon_login_fb"/>

            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorization_type_twitter"
                    android:id="@+id/btnTwitterLogin"
                    android:layout_gravity="center" android:src="@drawable/icon_login_twitter" android:background="@null"/>
            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorization_type_none"
                    android:id="@+id/btnNotAuthorized"
                    android:layout_gravity="center"
                    android:src="@drawable/not_authorized"
                    android:background="@null"
                    android:layout_marginTop="10dp" />

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" android:text="@string/sign_in" android:id="@+id/btnGLreg"
                    android:visibility="gone"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/authorization_message"
                    android:id="@+id/textView6" android:textColor="#010101" android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
                    android:layout_gravity="center_horizontal" android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
    <WebView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/webView"/>
</LinearLayout>