<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginLeft="15dp" android:layout_marginRight="15dp">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/login_with_colon"
                            android:id="@+id/textView7"
                            android:minLines="1"
                            android:maxLines="1"
                            android:layout_gravity="center_vertical"
                            android:minWidth="100dp" android:gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:text=""
                            android:ems="10"
                            android:id="@+id/etLogin"
                            />
                </LinearLayout>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/pwd_with_colon"
                            android:id="@+id/textView8"
                            android:layout_weight="1"
                            android:minLines="1"
                            android:maxLines="1"
                            android:minWidth="100dp" android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                >
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/etPass"
                            android:layout_weight="1"/>
                </LinearLayout>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:visibility="invisible">
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user"
                        android:id="@+id/cbNewUser"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            <LinearLayout android:orientation="horizontal"
                              android:weightSum="3"
                          android:layout_height="wrap_content">
                <LinearLayout android:layout_width="wrap_content"

                        android:layout_gravity="left"
                              android:layout_height="wrap_content"
                              >
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            android:id="@+id/btnLogin"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_gravity="right"
                              android:layout_height="wrap_content"
                              android:layout_marginLeft="40dp">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up"
                            android:id="@+id/btnRegist" android:layout_gravity="right" android:maxLines="1"
                            />
                </LinearLayout>
            </LinearLayout>


            </TableRow>
        </LinearLayout>
    </TableRow>
</LinearLayout>